<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="iv_cd_home">logo image</string>
    <string name="iv_cd_splash_screen">splash screen image</string>
    <string name="ex_tv_title">GET READY FOR</string>
    <string name="btn_start">START</string>
    <string name="tb_title">7 MINUTES WORKOUT</string>
    <string name="iv_exercise_image">exercise image</string>
    <string name="tv_next_exercise">%1$s&#160;&#160;next&#160;%2$s&#160;&#160;%3$s</string>
    <string name="end">END</string>
    <string name="success_image">success image</string>
    <string name="congrats">Congratulations</string>
    <string name="completed_text">You have completed the workout</string>
    <string name="complete_btn_text">back</string>
    <string name="are_sure">GO BACK ?</string>
    <string name="custom_no">NO</string>
    <string name="custom_yes">YES</string>
    <string name="custom_warning">WARNING : All progress will be lost if \"YES\"</string>
    <string name="bmi">BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="history_title">History</string>
    <string name="history_button_image">history button image</string>
</resources>