<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorOne"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/are_sure"
            android:fontFamily="@font/bebas_regular"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/custom_warning"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20sp">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorTwo"
                android:gravity="center"
                android:text="@string/custom_yes"
                android:fontFamily="@font/bebas_regular"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorTwo"
                android:gravity="center"
                android:text="@string/custom_no"
                android:fontFamily="@font/bebas_regular"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>
