<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTwo"
    tools:context=".BMIActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbBMI"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@null"
        android:theme="@style/ToolbarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/bebas_regular"
            android:text="@string/bmi_calculator"
            android:textColor="@color/colorBtThree"
            android:textSize="@dimen/tb_title" />


    </androidx.appcompat.widget.Toolbar>

    <!--positioned below toolbar-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitWeight"
        style="@style/BMIti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbBMI"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitWeight"
            style="@style/BMIti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--positioned below tilMetricUnitWeight-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitHeight"
        style="@style/BMIti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitWeight"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitHeight"
            style="@style/BMIti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--positioned below tilMetricUnitHeight-->
    <LinearLayout
        android:id="@+id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMetricUnitHeight"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_regular"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textAllCaps="true"
            android:textColor="@color/colorFive"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bebas_regular"
            android:gravity="center"
            android:textColor="@color/colorFive"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="15.00" />

        <TextView
            android:id="@+id/tvBMITitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/bebas_regular"
            android:gravity="center"
            android:textColor="@color/colorFive"
            android:textSize="22sp"
            tools:text="Normal" />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/mukta_regular"
            android:gravity="center"
            android:textColor="@color/colorFive"
            android:textSize="12sp"
            tools:text="description of your bmi" />

    </LinearLayout>


    <Button
        android:id="@+id/btnCalculateUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llDisplayBMIResult"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="20sp"
        android:backgroundTint="@color/colorFive"
        android:fontFamily="@font/bebas_regular"
        android:text="@string/calculate"
        android:textColor="@color/colorTwo"
        android:textSize="@dimen/button_text_size" />

</RelativeLayout>