<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context="eu.devhuba.a7_minutes_workout.MainActivity">

    <ImageView
        android:id="@+id/ivHome"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/ivctHome"
        android:src="@drawable/seven"
        app:layout_constraintBottom_toBottomOf="@id/glH35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />


    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_start_ripple"
        app:layout_constraintBottom_toTopOf="@id/flBMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/glV70"
        app:layout_constraintTop_toTopOf="@id/glH35">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bebas_regular"
            android:src="@drawable/icon_history"
            android:contentDescription="@string/history_button_image"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_start_ripple"
        app:layout_constraintBottom_toBottomOf="@id/glH65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/glV70"
        app:layout_constraintTop_toBottomOf="@id/flHistory">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bebas_regular"
            android:text="@string/bmi"
            android:textColor="@color/colorBtOne"
            android:textSize="25sp" />

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:background="@drawable/btn_start_ripple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/glH65">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bebas_regular"
            android:text="@string/btn_start"
            android:textColor="@color/colorBtOne"
            android:textSize="@dimen/button_text_size" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>